<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#63DDD2"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Hw30_title"
            android:textColor="#050F45"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hw30_name"
                android:textColor="#10194A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#5C951A"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/level_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Hw30_level"
                android:textColor="#10194A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="Level"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#5C951A"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/site_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Hw30_site"
                android:textColor="#10194A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:hint="Site"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#5C951A"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Hw30_id"
                android:textColor="#10194A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:ems="10"
                android:hint="ID"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="#5C951A"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_data"
                style="@android:style/Widget.Button"
                android:layout_width="100sp"
                android:layout_height="60sp"

                android:text="@string/Hw30_add"
                android:textColor="#E88686"
                android:textStyle="bold" />

            <Button
                android:id="@+id/up_date"
                style="@android:style/Widget.Button"
                android:layout_width="100sp"
                android:layout_height="60sp"
                android:layout_marginLeft="20dp"
                android:text="@string/Hw30_upDate"
                android:textColor="#EF3A3A"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/view_all"
                style="@android:style/Widget.Button"
                android:layout_width="100sp"
                android:layout_height="60sp"

                android:text="@string/Hw30_all"
                android:textColor="#0A776C"
                android:textStyle="bold" />

            <Button
                android:id="@+id/delete"
                style="@android:style/Widget.Button"
                android:layout_width="100sp"
                android:layout_height="60sp"
                android:layout_marginLeft="20dp"
                android:text="@string/Hw30_delete"
                android:textColor="#0F2351"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="view"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>